deploy/dev/deploy-rsshub-stateless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsshub-stateless
  namespace: crossbell
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rsshub-stateless
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rsshub-stateless
    spec:
      enableServiceLinks: false
      containers:
        - image: diygod/rsshub:chromium-bundled
          imagePullPolicy: Always
          name: rsshub-stateless
          ports:
            - containerPort: 1200
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            tcpSocket:
              port: 1200
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 1200
            initialDelaySeconds: 40
            periodSeconds: 20
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
