deploy/dev/deploy-server-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operatorsync-server-main
  namespace: crossbell
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: operatorsync
      tier: server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: operatorsync
        tier: server
    spec:
      enableServiceLinks: false
      containers:
        - image: $IMAGE_TAG_RELEASE
          imagePullPolicy: Always
          name: operatorsync-server
          command: ["server"]
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: '200Mi'
              cpu: '100m'
            limits:
              memory: '1500Mi'
              cpu: '1500m'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 40
            failureThreshold: 1
            periodSeconds: 60
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
